fix: simplify class matching logic and improve method name validation using isBlank